making add juvenile to center

--- a/app/layouts/Dashboard/Dashboard.module.scss
+++ b/app/layouts/Dashboard/Dashboard.module.scss
@@ -3,5 +3,5 @@
 }
 
 .content{
-  @apply w-full mt-[25px] mx-[25px] overflow-auto p-[25px] rounded-md bg-white
+  @apply w-full h-full overflow-auto p-[25px] rounded-md bg-white
 }
