--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,6 @@
 .base_input{
     @apply box-border bg-white placeholder:text-[#c5c5c5] py-[5px] px-[10px] text-base rounded-md border border-[#c5c5c5] focus:outline focus:outline-offset-[2px] focus:outline-[2px] focus:outline-[#1b80ce];
 }
-
+.error_message{
+    @apply text-red-400 min-h-[20px] h-auto;
+}
